examples/errors/returntype_no_return.ign
<function name=test returnType=int>
  {print("something")}
</function>


<program>
  {test()}
</program>